<resources>
    <string name="xene">XINI</string>
    <string name="app_name">XINI Hostel</string>
    <string name="_91">+91</string>
    <string name="title_activity_main_navigation">main_activity_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_header_profilepic_description">User\'s Profile Picture</string>
    <string name="navigation_header_deals">Deals</string>
    <string name="navigation_header_email">yashtejwani00@gmail.com</string>
    <string name="navigation_header_messages">Messages</string>
    <string name="navigation_header_name"></string>
    <string name="navigation_header_deals_count">5</string>
    <string name="navigation_header_messages_count">2</string>

    <string name="card_view_image_contentDescription">picture of pg</string>
    <string name="card_view_name_of_pg">Name of PG</string>
    <string name="card_view_area_of_pg">Area of PG</string>
    <string name="slide_bar_menu_1">My Profile</string>
    <string name="slide_bar_menu_2">My Deals</string>
    <string name="slide_bar_menu_3">Help</string>
    <string name="layout_pg_pictures_likeButton_description">add to favourate button</string>
    <string name="layout_pg_pictures_name">Name of pg</string>
    <string name="layout_pg_pictures_area">Area of pg</string>
    <string name="layout_pg_pictures_rent_text">Rent per Month</string>
    <string name="layout_pg_pictures_rent">4000/-</string>
    <string name="layout_pg_pictures_utilities">Utilities :</string>
    <string name="layout_pg_pictures_book">Book</string>

    <string name="layout_pg_description_filler_text"><![CDATA[<this is filler text> Premium – Exclusive (PG) Co Living Acommodations in Bungalow Building Contemporary Planned Spacious Rooms Calm and Peaceful, Professionally Designed Luxurious Accommodation for Corporate Working Men. \n\nConceptually designed 4 Spacious (140–170 Sq. Ft. Carpet) Rooms on twin Sharing Basis. \n\n# Power bill will be borne by the Paying Guest* \n\n# Easy access to Local Market Streets, Restaurants, Gym, ATM, Metro Station, Airport ETC. \n\n# Rent includes Repair and Maintenance of the all appliances including the AC. (). \n\n# Bed sheet washing and changing. (Free of Cost) \n\n# Only for Verified Responsible and Disciplined Corporate Room-mates. \n\n# Plush upholstery with Marble flooring / Vitrified Tiles.]]></string>
    <string name="layout_pg_description_description">Description :</string>

    <string name="layout_pg_location_location">Location of pg :</string>

    <string name="layout_pg_review_data_name">yashwant tejwani</string>
    <string name="layout_pg_review_data_filler_text"><![CDATA[<this is filler text> saw this property , nice place to live the environment is peacful tu study.\nI strongly recommend this pg]]></string>

    <string name="layout_pg_reviews_reviews">Reviews :</string>
    <string name="notification_data_detail">filler text the pg you applied for gave reponse.\nclick here you check it out and start conversation with the owner.</string>
    <string name="notification_data_heading">filler text you got response</string>
    <string name="layoutFaqData_Q">Q :</string>
    <string name="title_activity_maps">Map</string>

    <string name="faq_q1">How to amend hostel details?</string>
    <string name="faq_a1">You have to send us mail through ‘Contact Us’ option in side navigation bar then the authentication will be done and then the amendments will be done automatically</string>

    <string name="faq_q2">How to accept a request ?</string>
    <string name="faq_a2">You’ll get a notification when a person is interested in your property, open his profile to accept the request.</string>

    <string name="faq_q3">How to start chatting with a customer?</string>
    <string name="faq_a3">To start chatting functionality you have to first accept the request then the icon will automatically appear.</string>

    <string name="faq_q4">How to save a profile for later?</string>
    <string name="faq_a4">When you open a request, an heart sign will appear between ACCEPT and REJECT option, upon clicking the profile will be wishlisted and you can access it from wishlist in toolbar anytime.</string>

    <string name="faq_q5">How to see all the chats?</string>
    <string name="faq_a5">A.All the chats can be accessed through message icon in toolbar.</string>


</resources>