<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:elevation="3dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/layoutPgPicturesTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@null"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager22"
        app:layout_constraintEnd_toEndOf="@+id/viewPager22"
        app:layout_constraintStart_toStartOf="@+id/viewPager22"
        app:tabBackground="@drawable/default_dot"
        app:tabIndicator="@drawable/selected_dot"
        app:tabGravity="center"
        app:tabIndicatorGravity="center" />

    <TextView
        android:id="@+id/layoutPgPictures_NameOfPg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/layout_pg_pictures_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager22" />

    <TextView
        android:id="@+id/layoutPgPictures_AreaOfPg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/layout_pg_pictures_area"
        android:elevation="3dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_NameOfPg" />

    <RatingBar
        android:id="@+id/layoutPgPictures_RatingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_AreaOfPg" />

    <TextView
        android:id="@+id/layoutPgPictures_Rent"
        android:layout_width="wrap_content"
        android:elevation="3dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:text="@string/layout_pg_pictures_rent_text"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager22" />

    <TextView
        android:id="@+id/price_pgdetails"
        android:elevation="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/layout_pg_pictures_rent"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/layoutPgPictures_Rent"
        app:layout_constraintStart_toStartOf="@+id/layoutPgPictures_Rent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_Rent" />

    <TextView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:elevation="3dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/layout_pg_pictures_utilities"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_RatingBar" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">
        <LinearLayout
            android:id="@+id/pgPicturesUtilitiesLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bed"/>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>